UF-16887: Add support for json schema in persistence layer.
